--- a/index.html
+++ b/index.html
@@ -1,1 +1,340 @@
+<!DOCTYPE html>
+<html lang="UTF-8">
 
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>MONEYMAKERS</title>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <!--Bootstrap cdn link start here-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!--Bootstrap cdn css link ends here-->
+
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/f7b6b58142.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <section class="navbar bg-success">
+    <div class="logo">
+      <image src="Logo.png" alt="MM">
+    </div>
+    <div class="Branding">
+      <h4>MONEYMAKERS</h4>
+    </div>
+    <div class="HAMBURGER" onclick="toggleMenu()">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+    <div class="nav-links">
+      <a href="Lottery.html"><i class="fa-solid fa-sack-dollar"></i> Lottery</a>
+      <a href="mailto:kraftgameing148@gmail.com "><i class="fa-solid fa-headset"></i> CONTACT-US</a>
+      <!--<a href="Presult.html"><i class="fa-solid fa-house"></i> P.RESULTS</a>-->
+    </div>
+  </section>
+  <section class="sticky-top scroll">
+    <div class=" Container scroll-right">
+      <marquee behavior="" direction="left"><strong>WELCOME TO MONEYMAKERS. INVEST AND EARN MONEY
+          PLATFORM. MINIMUM
+          INVESTMENT AMOUNT 10₹ WINING AMOUNT 600₹. DON'T WAIT START INVEST AND EARN. पैसा बनाने वालों का स्वागत है.
+          निवेश करें और पैसा कमाएँ मंच। न्यूनतम निवेश राशि 10₹, जीत की राशि 600₹। इंतजार न करें, निवेश शुरू करें और
+          कमाएं।</strong></marquee>
+    </div>
+  </section>
+  <section class="NUMBER">
+    <div class="number">
+      <h2 class="center">CHOOSE A NUMBER </h2>
+      <span class="num" onclick="showpopup(1)">1</span>
+      <span class="num" onclick="showpopup(2)">2</span>
+      <span class="num" onclick="showpopup(3)">3</span>
+      <span class="num" onclick="showpopup(4)">4</span>
+      <span class="num" onclick="showpopup(5)">5</span>
+      <span class="num" onclick="showpopup(6)">6</span>
+      <span class="num" onclick="showpopup(7)">7</span>
+      <span class="num" onclick="showpopup(8)">8</span>
+      <span class="num" onclick="showpopup(9)">9</span>
+      <span class="num" onclick="showpopup(10)">10</span>
+      <span class="num" onclick="showpopup(11)">11</span>
+      <span class="num" onclick="showpopup(12)">12</span>
+      <span class="num" onclick="showpopup(13)">13</span>
+      <span class="num" onclick="showpopup(14)">14</span>
+      <span class="num" onclick="showpopup(15)">15</span>
+      <span class="num" onclick="showpopup(16)">16</span>
+      <span class="num" onclick="showpopup(17)">17</span>
+      <span class="num" onclick="showpopup(18)">18</span>
+      <span class="num" onclick="showpopup(19)">19</span>
+      <span class="num" onclick="showpopup(20)">20</span>
+      <span class="num" onclick="showpopup(21)">21</span>
+      <span class="num" onclick="showpopup(22)">22</span>
+      <span class="num" onclick="showpopup(23)">23</span>
+      <span class="num" onclick="showpopup(24)">24</span>
+      <span class="num" onclick="showpopup(25)">25</span>
+      <span class="num" onclick="showpopup(26)">26</span>
+      <span class="num" onclick="showpopup(27)">27</span>
+      <span class="num" onclick="showpopup(28)">28</span>
+      <span class="num" onclick="showpopup(29)">29</span>
+      <span class="num" onclick="showpopup(30)">30</span>
+      <span class="num" onclick="showpopup(31)">31</span>
+      <span class="num" onclick="showpopup(32)">32</span>
+      <span class="num" onclick="showpopup(33)">33</span>
+      <span class="num" onclick="showpopup(34)">34</span>
+      <span class="num" onclick="showpopup(35)">35</span>
+      <span class="num" onclick="showpopup(36)">36</span>
+      <span class="num" onclick="showpopup(37)">37</span>
+      <span class="num" onclick="showpopup(38)">38</span>
+      <span class="num" onclick="showpopup(39)">39</span>
+      <span class="num" onclick="showpopup(40)">40</span>
+      <span class="num" onclick="showpopup(41)">41</span>
+      <span class="num" onclick="showpopup(42)">42</span>
+      <span class="num" onclick="showpopup(43)">43</span>
+      <span class="num" onclick="showpopup(44)">44</span>
+      <span class="num" onclick="showpopup(45)">45</span>
+      <span class="num" onclick="showpopup(46)">46</span>
+      <span class="num" onclick="showpopup(47)">47</span>
+      <span class="num" onclick="showpopup(48)">48</span>
+      <span class="num" onclick="showpopup(49)">49</span>
+      <span class="num" onclick="showpopup(50)">50</span>
+      <span class="num" onclick="showpopup(51)">51</span>
+      <span class="num" onclick="showpopup(52)">52</span>
+      <span class="num" onclick="showpopup(53)">53</span>
+      <span class="num" onclick="showpopup(54)">54</span>
+      <span class="num" onclick="showpopup(55)">55</span>
+      <span class="num" onclick="showpopup(56)">56</span>
+      <span class="num" onclick="showpopup(57)">57</span>
+      <span class="num" onclick="showpopup(58)">58</span>
+      <span class="num" onclick="showpopup(59)">59</span>
+      <span class="num" onclick="showpopup(60)">60</span>
+      <span class="num" onclick="showpopup(61)">61</span>
+      <span class="num" onclick="showpopup(62)">62</span>
+      <span class="num" onclick="showpopup(63)">63</span>
+      <span class="num" onclick="showpopup(64)">64</span>
+      <span class="num" onclick="showpopup(65)">65</span>
+      <span class="num" onclick="showpopup(66)">66</span>
+      <span class="num" onclick="showpopup(67)">67</span>
+      <span class="num" onclick="showpopup(68)">68</span>
+      <span class="num" onclick="showpopup(69)">69</span>
+      <span class="num" onclick="showpopup(70)">70</span>
+    </div>
+    <div id="popup" class="popup" style="display: none;">
+      <h2>Enter Amount</h2>
+      <input type="number" id="amount" min="10" placeholder="Enter amount"><br><span class="text-danger"
+        id="error"></span>
+      <button class="WABUTTON" onclick="sendWhatsApp()">Send <i
+          class="fa-solid fa-arrow-right-from-bracket"></i></button>
+    </div>
+  </section>
+  <section class="scroll">
+    <div class="Container scroll-right">
+      <marquee behavior="" direction="left"><strong>RESULT TIMING IS 12:00 AM. नतीजॆं का समय 12:00 बजे पूर्वाह्न
+          है।</strong></marquee>
+    </div>
+  </section>
+  <section class="result">
+    <div class="result-container">
+      <h2>1ST RESULT<br>पहला परिणाम<br>TIMING {12:00 AM}<br>__<span class="blinking">NEW</span></h2>
+    </div>
+    <section class="scroll">
+      <div class="Container scroll-right">
+        <marquee behavior="" direction="left"><strong>RESULT TIMING IS 12:00 PM. नतीजें का समय दोपहर 12:00 बजे
+            है।</strong></marquee>
+      </div>
+    </section>
+    <div class="result-container">
+      <h2>2nd RESULT<br>दूसरा परिणाम<br>TIMING {12:00 PM}<br>27<span class="blinking">NEW</span></h2>
+    </div>
+  </section>
+  <section class="2024">
+    <div class="JANUARY">
+      <table>
+        <caption>Number Results for Fabuary 2024</caption>
+        <tr>
+          <th>DATE</th>
+          <th>12:00 AM</th>
+          <th>12:00 PM</th>
+        </tr>
+        <tr>
+          <td>01/02/2024</td>
+          <td>28</td>
+          <td>63</td>
+        </tr>
+        <tr>
+          <td>02/02/2024</td>
+          <td>70</td>
+          <td>48</td>
+        </tr>
+        <tr>
+          <td>03/02/2024</td>
+          <td>28</td>
+          <td>67</td>
+        </tr>
+        <tr>
+          <td>04/02/2024</td>
+          <td>33</td>
+          <td>53</td>
+        </tr>
+        <tr>
+          <td>05/02/2024</td>
+          <td>02</td>
+          <td>58</td>
+        </tr>
+        <tr>
+          <td>06/02/2024</td>
+          <td>67</td>
+          <td>79</td>
+        </tr>
+        <tr>
+          <td>07/02/2024</td>
+          <td>67</td>
+          <td>54</td>
+        </tr>
+        <tr>
+          <td>08/02/2024</td>
+          <td>43</td>
+          <td>21</td>
+        </tr>
+        <tr>
+          <td>09/02/2024</td>
+          <td>65</td>
+          <td>09</td>
+        </tr>
+        <tr>
+          <td>10/02/2024</td>
+          <td>56</td>
+          <td>56</td>
+        </tr>
+        <tr>
+          <td>11/02/2024</td>
+          <td>31</td>
+          <td>34</td>
+        </tr>
+        <tr>
+          <td>12/02/2024</td>
+          <td>66</td>
+          <td>12</td>
+        </tr>
+        <tr>
+          <td>13/02/2024</td>
+          <td>17</td>
+          <td>56</td>
+        </tr>
+        <tr>
+          <td>14/02/2024</td>
+          <td>70</td>
+          <td>34</td>
+        </tr>
+        <tr>
+          <td>15/02/2024</td>
+          <td>65</td>
+          <td>31</td>
+        </tr>
+        <tr>
+          <td>16/02/2024</td>
+          <td>18</td>
+          <td>39</td>
+        </tr>
+        <tr>
+          <td>17/02/2024</td>
+          <td>21</td>
+          <td>27</td>
+        </tr>
+        <tr>
+          <td>18/02/2024</td>
+          <td>35</td>
+          <td>67</td>
+        </tr>
+        <tr>
+          <td>19/02/2024</td>
+          <td>12</td>
+          <td>12</td>
+        </tr>
+        <tr>
+          <td>20/02/2024</td>
+          <td>55</td>
+          <td>36</td>
+        </tr>
+        <tr>
+          <td>21/02/2024</td>
+          <td>48</td>
+          <td>64</td>
+        </tr>
+        <tr>
+          <td>22/02/2024</td>
+          <td>01</td>
+          <td>70</td>
+        </tr>
+        <tr>
+          <td>23/02/2024</td>
+          <td>17</td>
+          <td>19</td>
+        </tr>
+        <tr>
+          <td>24/02/2024</td>
+          <td>39</td>
+          <td>24</td>
+        </tr>
+        <tr>
+          <td>25/02/2024</td>
+          <td>32</td>
+          <td>09</td>
+        </tr>
+        <tr>
+          <td>26/02/2024</td>
+          <td>56</td>
+          <td>68</td>
+        </tr>
+        <tr>
+          <td>27/02/2024</td>
+          <td>05</td>
+          <td>64</td>
+        </tr>
+        <tr>
+          <td>28/02/2024</td>
+          <td>29</td>
+          <td>07</td>
+        </tr>
+        <tr>
+          <td>29/02/2024</td>
+          <td>12</td>
+          <td>01</td>
+        </tr>
+        <!--<tr>
+          <td>30/01/2024</td>
+          <td>01</td>
+          <td>10</td>
+        </tr>
+        <tr>
+          <td>31/01/2024</td>
+          <td>69</td>
+          <td>31</td>
+        </tr>-->
+      </table>
+    </div>
+  </section>
+  <section class="foot">
+    <footer>&copy COPYRIGHT BY MONEYMAKERS</footer>
+  </section>
+  <a href="Money-Makers.apk" download>
+    <button class="APK"><i class="fa-solid fa-download"></i> Download APK</button>
+  </a>
+  <script src="script.js"></script>
+  <!--Bootstrap cdn js link start here-->
+  <!--Bootstrap cdn js link start here-->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <!--Bootstrap cdn js link ends here-->
+
+  <!--Bootstrap cdn js link ends here-->
+
+</body>
+
+        </html>
