--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="nav-links">
       <a href="Lottery.html"><i class="fa-solid fa-sack-dollar"></i> Lottery</a>
       <a href="mailto:kraftgameing148@gmail.com "><i class="fa-solid fa-headset"></i> CONTACT-US</a>
-      <!--<a href="Presult.html"><i class="fa-solid fa-house"></i> P.RESULTS</a>-->
+      <a href="PR.html"><i class="fa-solid fa-house"></i> P.RESULTS</a>
     </div>
   </section>
   <section class="sticky-top scroll">
