--- a/PR.html
+++ b/PR.html
@@ -201,7 +201,160 @@
     </details>
     <details>
       <summary><strong>FEBRUARY 2024 RESULT </strong>       </summary>
-      <p>LIVE RESULT SHOW ON Home Page</p>
+      <table>
+  <caption>Number Results for Fabuary 2024</caption>
+  <tr>
+    <th>DATE</th>
+    <th>12:00 AM</th>
+    <th>12:00 PM</th>
+  </tr>
+  <tr>
+    <td>01/02/2024</td>
+    <td>28</td>
+    <td>63</td>
+  </tr>
+  <tr>
+    <td>02/02/2024</td>
+    <td>70</td>
+    <td>48</td>
+  </tr>
+  <tr>
+    <td>03/02/2024</td>
+    <td>28</td>
+    <td>67</td>
+  </tr>
+  <tr>
+    <td>04/02/2024</td>
+    <td>33</td>
+    <td>53</td>
+  </tr>
+  <tr>
+    <td>05/02/2024</td>
+    <td>02</td>
+    <td>58</td>
+  </tr>
+  <tr>
+    <td>06/02/2024</td>
+    <td>67</td>
+    <td>79</td>
+  </tr>
+  <tr>
+    <td>07/02/2024</td>
+    <td>67</td>
+    <td>54</td>
+  </tr>
+  <tr>
+    <td>08/02/2024</td>
+    <td>43</td>
+    <td>21</td>
+  </tr>
+  <tr>
+    <td>09/02/2024</td>
+    <td>65</td>
+    <td>09</td>
+  </tr>
+  <tr>
+    <td>10/02/2024</td>
+    <td>56</td>
+    <td>56</td>
+  </tr>
+  <tr>
+    <td>11/02/2024</td>
+    <td>31</td>
+    <td>34</td>
+  </tr>
+  <tr>
+    <td>12/02/2024</td>
+    <td>66</td>
+    <td>12</td>
+  </tr>
+  <tr>
+    <td>13/02/2024</td>
+    <td>17</td>
+    <td>56</td>
+  </tr>
+  <tr>
+    <td>14/02/2024</td>
+    <td>70</td>
+    <td>34</td>
+  </tr>
+  <tr>
+    <td>15/02/2024</td>
+    <td>65</td>
+    <td>31</td>
+  </tr>
+  <tr>
+    <td>16/02/2024</td>
+    <td>18</td>
+    <td>39</td>
+  </tr>
+  <tr>
+    <td>17/02/2024</td>
+    <td>21</td>
+    <td>27</td>
+  </tr>
+  <tr>
+    <td>18/02/2024</td>
+    <td>35</td>
+    <td>67</td>
+  </tr>
+  <tr>
+    <td>19/02/2024</td>
+    <td>12</td>
+    <td>12</td>
+  </tr>
+  <tr>
+    <td>20/02/2024</td>
+    <td>55</td>
+    <td>36</td>
+  </tr>
+  <tr>
+    <td>21/02/2024</td>
+    <td>48</td>
+    <td>64</td>
+  </tr>
+  <tr>
+    <td>22/02/2024</td>
+    <td>01</td>
+    <td>70</td>
+  </tr>
+  <tr>
+    <td>23/02/2024</td>
+    <td>17</td>
+    <td>19</td>
+  </tr>
+  <tr>
+    <td>24/02/2024</td>
+    <td>39</td>
+    <td>24</td>
+  </tr>
+  <tr>
+    <td>25/02/2024</td>
+    <td>32</td>
+    <td>09</td>
+  </tr>
+  <tr>
+    <td>26/02/2024</td>
+    <td>56</td>
+    <td>68</td>
+  </tr>
+  <tr>
+    <td>27/02/2024</td>
+    <td>05</td>
+    <td>64</td>
+  </tr>
+  <tr>
+    <td>28/02/2024</td>
+    <td>29</td>
+    <td>07</td>
+  </tr>
+  <tr>
+    <td>29/02/2024</td>
+    <td>12</td>
+    <td>01</td>
+  </tr>
+
+      </table>
     </details>
 
   </section>
