--- a/Lottery.html
+++ b/Lottery.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LOTTERY</title>
+  <style>
+    .LOTTERY{
+      color:grey;
+      font-size:20px;
+      /*margin-top:50%;*/
+      text-align: center;
+      font-weight:bold;
+    }
 
+   .SAD{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 380px;
+      height: 380px;
+      color: grey;    
+   }
+</style>
+</head>
+<body>
+  <div class="LOTTERY">CURRENTLY NO LOTTERY'S AVAILABLE.<br><img class="SAD" src="sad-face.png" />
+  </div>
+  
+</body>
+</html>
