Data for 13th march

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   </section>
   <section class="result">
     <div class="result-container">
-      <h2>1ST RESULT<br>पहला परिणाम<br>TIMING {12:00 AM}<br>__<span class="blinking">NEW</span></h2>
+      <h2>1ST RESULT<br>पहला परिणाम<br>TIMING {12:00 AM}<br>43<span class="blinking">NEW</span></h2>
     </div>
     <section class="scroll">
       <div class="Container scroll-right">
@@ -143,7 +143,7 @@
       </div>
     </section>
     <div class="result-container">
-      <h2>2nd RESULT<br>दूसरा परिणाम<br>TIMING {12:00 PM}<br>27<span class="blinking">NEW</span></h2>
+      <h2>2nd RESULT<br>दूसरा परिणाम<br>TIMING {12:00 PM}<br>21<span class="blinking">NEW</span></h2>
     </div>
   </section>
   <section class="2024">
@@ -167,58 +167,58 @@
         </tr>
         <tr>
           <td>03/03/2024</td>
-          <td>——</td>
-          <td>——</td>
+          <td>67</td>
+          <td>70</td>
         </tr>
         <tr>
           <td>04/03/2024</td>
-          <td></td>
-          <td></td>
+          <td>06</td>
+          <td>21</td>
         </tr>
         <tr>
           <td>05/03/2024</td>
-          <td></td>
-          <td></td>
+          <td>34</td>
+          <td>56</td>
         </tr>
         <tr>
           <td>06/03/2024</td>
-          <td></td>
-          <td></td>
+          <td>09</td>
+          <td>09</td>
         </tr>
         <tr>
           <td>07/03/2024</td>
-          <td></td>
-          <td></td>
+          <td>32</td>
+          <td>51</td>
         </tr>
         <tr>
           <td>08/03/2024</td>
-          <td></td>
-          <td></td>
+          <td>56</td>
+          <td>43</td>
         </tr>
         <tr>
           <td>09/03/2024</td>
-          <td></td>
-          <td></td>
+          <td>17</td>
+          <td>29</td>
         </tr>
         <tr>
           <td>10/03/2024</td>
-          <td></td>
-          <td></td>
+          <td>34</td>
+          <td>21</td>
         </tr>
         <tr>
           <td>11/03/2024</td>
-          <td></td>
-          <td></td>
+          <td>42</td>
+          <td>31</td>
         </tr>
         <tr>
           <td>12/03/2024</td>
-          <td></td>
-          <td></td>
+          <td>43</td>
+          <td>21</td>
         </tr>
         <tr>
           <td>13/03/2024</td>
-          <td></td>
-          <td></td>
+          <td>——</td>
+          <td>——</td>
         </tr>
         <tr>
           <td>14/03/2024</td>
